section4 is done

--- a/index.html
+++ b/index.html
@@ -80,7 +80,26 @@
     <div class="section3">
       <div class="section3_container _container">
         <div class="content_block">
-          <img src="/assets/section3_image.jpg" alt="section2_img" />
+          <img src="/assets/section3_image.jpg" alt="section3_img" />
+          <div class="right_block">
+            <div class="text_block">
+              <h1 class="title">Light, Fast & Powerful</h1>
+              <span class="text"
+                >Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                natoque penatibus et magnis dis parturient montes, nascetur
+                ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+                pretium quis, sem. Nulla consequat massa quis enim.</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="section4">
+      <div class="section4_container _container">
+        <div class="content_block">
+          <img src="/assets/section4_image.jpg" alt="section4_img" />
           <div class="right_block">
             <div class="text_block">
               <h1 class="title">Light, Fast & Powerful</h1>
