section 6 is done

--- a/index.html
+++ b/index.html
@@ -115,5 +115,25 @@
         </div>
       </div>
     </div>
+    <div class="section5">
+      <div class="section5_container _container">
+        <div class="content_block">
+          <img src="/assets/section5_image.jpg" alt="section5_img" />
+          <div class="right_block">
+            <div class="text_block">
+              <h1 class="title">Light, Fast & Powerful</h1>
+              <span class="text"
+                >Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
+                Aenean commodo ligula eget dolor. Aenean massa. Cum sociis
+                natoque penatibus et magnis dis parturient montes, nascetur
+                ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu,
+                pretium quis, sem. Nulla consequat massa quis enim.</span
+              >
+            </div>
+            <a href="#" class="purchase_button buy_button">Purchase Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
