section 6 is done

--- a/index.html
+++ b/index.html
@@ -130,8 +130,25 @@
                 pretium quis, sem. Nulla consequat massa quis enim.</span
               >
             </div>
-            <a href="#" class="purchase_button buy_button">Purchase Now</a>
+            <a href="#" class="purchase_button">Purchase Now</a>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="section6">
+      <div class="section6_container _container">
+        <div class="content_block">
+          <h1 class="title">A Price To Suit Everyone</h1>
+          <span class="text1"
+            >Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean
+            commodo ligula eget dolor. Aenean massa. Cum sociis natoque
+            penatibus et magnis dis parturient montes, nascetur ridiculus
+          </span>
+          <h1 class="price">$40</h1>
+          <span class="price_description">UI Design Kit</span>
+          <span class="text2">See, One price. Simple.</span>
+          <a href="#" class="purchase_button">Purchase Now</a>
         </div>
       </div>
     </div>
