--- a/index.html
+++ b/index.html
@@ -135,7 +135,6 @@
         </div>
       </div>
     </div>
-
     <div class="section6">
       <div class="section6_container _container">
         <div class="content_block">
@@ -152,5 +151,38 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="footer_container _container">
+        <div class="title_content_block">
+          <span class="text">©2020 Yourcompany</span>
+          <h1 class="logo">Landie</h1>
+          <a href="#" class="purchase_button">Purchase Now</a>
+        </div>
+        <div class="nav_content_block">
+          <nav class="footer_nav">
+            <a href="" class="footer_nav_link">Home</a>
+            <a href="" class="footer_nav_link">About</a>
+            <a href="" class="footer_nav_link">Contact</a>
+          </nav>
+          <div class="social_block">
+            <a href="#" class="social_link"
+              ><img src="/assets/facebook_icon.svg" alt="facebook" class=""
+            /></a>
+            <a href="#" class="social_link"
+              ><img src="/assets/linkedin_icon.svg" alt="linkedin" class=""
+            /></a>
+            <a href="#" class="social_link"
+              ><img src="/assets/twitter_icon.svg" alt="twitter" class=""
+            /></a>
+            <a href="#" class="social_link"
+              ><img src="/assets/youtube_icon.svg" alt="youtube" class=""
+            /></a>
+            <a href="#" class="social_link"
+              ><img src="/assets/Instagram_icon.svg" alt="instagramm" class=""
+            /></a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
